--- a/index.html
+++ b/index.html
@@ -1,34 +1,138 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Wizard Maker — Button Fix (v10 HTML/JS)</title>
+  <title>Wizard Maker — Button Fix (v11 UI)</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
   <style>
-    body { font-family: sans-serif; margin: 20px; background: #f9fafb; }
-    h1 { font-size: 1.5rem; margin-bottom: .5rem; }
-    .card { background: #fff; border-radius: 1rem; padding: 1.5rem; box-shadow: 0 4px 12px rgba(0,0,0,.1); }
-    .tabs { display: flex; gap: .5rem; flex-wrap: wrap; margin: 1rem 0; }
-    .tab { padding: .25rem .75rem; border: 1px solid #ccc; border-radius: .5rem; background: #eee; cursor: pointer; }
-    .tab.active { background: #ddd; font-weight: bold; }
-    iframe { width: 100%; height: 600px; border: 1px solid #ccc; border-radius: .5rem; background: #fff; }
-    .modal-backdrop { position: fixed; inset: 0; background: rgba(0,0,0,.4); display: flex; align-items: center; justify-content: center; }
-    .modal { background: #fff; padding: 1rem; border-radius: 1rem; max-width: 400px; width: 100%; box-shadow: 0 4px 16px rgba(0,0,0,.3); }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 2rem;
+      background: #f0f2f5;
+      display: flex;
+      justify-content: center;
+    }
+    .card {
+      background: #fff;
+      border-radius: 1rem;
+      padding: 1.5rem 2rem;
+      box-shadow: 0 4px 14px rgba(0,0,0,0.1);
+      max-width: 1100px;
+      width: 100%;
+    }
+    h1 {
+      font-size: 1.5rem;
+      margin-bottom: .25rem;
+    }
+    p {
+      font-size: 0.9rem;
+      color: #555;
+      margin-bottom: 1rem;
+    }
+    .topbar {
+      display: flex;
+      gap: .5rem;
+      align-items: center;
+      margin-bottom: 1rem;
+    }
+    input[type="file"] {
+      padding: .4rem;
+      border: 1px solid #ccc;
+      border-radius: .5rem;
+    }
+    button {
+      padding: .5rem .9rem;
+      border: none;
+      border-radius: .5rem;
+      background: #2563eb;
+      color: #fff;
+      cursor: pointer;
+      font-size: 0.9rem;
+    }
+    button:hover {
+      background: #1e4fc2;
+    }
+    .tabs {
+      display: flex;
+      gap: .5rem;
+      flex-wrap: wrap;
+      margin: 1rem 0;
+    }
+    .tab {
+      padding: .25rem .75rem;
+      border: 1px solid #ccc;
+      border-radius: .5rem;
+      background: #f3f4f6;
+      cursor: pointer;
+      font-size: 0.85rem;
+    }
+    .tab.active {
+      background: #e5e7eb;
+      font-weight: bold;
+    }
+    iframe {
+      width: 100%;
+      height: 600px;
+      border: 1px solid #ccc;
+      border-radius: .5rem;
+      background: #fff;
+    }
+    .modal-backdrop {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,.4);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 50;
+    }
+    .modal {
+      background: #fff;
+      padding: 1.5rem;
+      border-radius: 1rem;
+      max-width: 420px;
+      width: 100%;
+      box-shadow: 0 6px 20px rgba(0,0,0,.25);
+    }
+    .modal h2 {
+      margin-bottom: 1rem;
+      font-size: 1.2rem;
+    }
     .mb-2 { margin-bottom: .5rem; }
     .mb-3 { margin-bottom: .75rem; }
     .mb-4 { margin-bottom: 1rem; }
-    input, select, button { padding: .5rem; border: 1px solid #ccc; border-radius: .5rem; width: 100%; }
-    button { cursor: pointer; }
-    .actions { display: flex; justify-content: flex-end; gap: .5rem; }
+    input, select {
+      padding: .5rem;
+      border: 1px solid #ccc;
+      border-radius: .5rem;
+      width: 100%;
+      font-size: .9rem;
+    }
+    .actions {
+      display: flex;
+      justify-content: flex-end;
+      gap: .5rem;
+    }
+    .actions button {
+      flex: 0 0 auto;
+    }
+    #cancelBtn {
+      background: #e5e7eb;
+      color: #111;
+    }
+    #cancelBtn:hover {
+      background: #d1d5db;
+    }
   </style>
 </head>
 <body>
   <div class="card">
-    <h1>Wizard Maker — Button Fix (v10)</h1>
+    <h1>Wizard Maker — Button Fix (v11)</h1>
     <p>Upload EduPro (multi-page). Double-click or double-tap buttons/links to edit. Cancel fully restores. Fonts untouched.</p>
 
-    <div style="display:flex; gap:.5rem; align-items:center;">
+    <div class="topbar">
       <input type="file" id="zipInput" accept=".zip">
       <button id="exportBtn">⬇ Export ZIP</button>
     </div>
@@ -40,7 +144,7 @@
   <!-- Modal -->
   <div id="modalBackdrop" class="modal-backdrop" style="display:none;">
     <div class="modal">
-      <h2 class="mb-3">Edit Element</h2>
+      <h2>Edit Element</h2>
       <div id="textSection" class="mb-4">
         <label class="mb-2">Text / Placeholder</label>
         <input id="modalText">
@@ -87,7 +191,7 @@
     let pages = [];
     let pageContents = {};
     let editedContents = {};
-    let otherFiles = {}; // store css/js/images untouched
+    let otherFiles = {};
     let activePage = "";
     let iframeRefs = {};
 
@@ -105,13 +209,12 @@
 
       await Promise.all(Object.keys(zip.files).map(async (filename) => {
         const entry = zip.files[filename];
-        if (entry.dir) return; // skip folders
+        if (entry.dir) return;
         if (filename.toLowerCase().endsWith(".html")) {
           const data = await entry.async("string");
           newPages.push(filename);
           newContents[filename] = data;
         } else {
-          // keep non-html as Uint8Array
           const data = await entry.async("uint8array");
           other[filename] = data;
         }
@@ -135,7 +238,6 @@
       renderIframes();
     });
 
-    // Tabs
     function renderTabs() {
       tabsEl.innerHTML = "";
       pages.forEach((p) => {
@@ -147,7 +249,6 @@
       });
     }
 
-    // Inject bridge
     function injectEditingBridge(html, pageName) {
       const bridge = `<script>(function(){
         var EDIT_ATTR='data-edit-id';
@@ -198,7 +299,6 @@
       return html.replace(/<\/body>/i, bridge + "</body>");
     }
 
-    // Render iframe
     function renderIframes() {
       iframeContainer.innerHTML = "";
       if (!activePage) return;
@@ -208,20 +308,18 @@
       iframeRefs[activePage] = iframe;
     }
 
-    // --- Listen for messages from iframe ---
     window.addEventListener("message", (event) => {
       const d = event.data || {};
       if (d.type === "OPEN_EDITOR") {
         modalTarget = { page: d.page, id: d.id, hasText: !!d.hasText };
         modalText.value = d.text || "";
         modalColor.value = "#000000";
-        originalSnapshot = d; // full snapshot
+        originalSnapshot = d;
         modalBackdrop.style.display = "flex";
         document.getElementById("textSection").style.display = d.hasText ? "block" : "none";
       }
     });
 
-    // Live updates
     modalText.addEventListener("input", () => {
       const {page,id} = modalTarget;
       iframeRefs[page].contentWindow.postMessage({type:"APPLY_TEXT",id,text:modalText.value},"*");
@@ -249,7 +347,6 @@
       reader.readAsDataURL(file);
     });
 
-    // Save edits
     saveBtn.onclick = () => {
       const {page} = modalTarget;
       const iframe = iframeRefs[page];
@@ -260,7 +357,6 @@
       modalBackdrop.style.display = "none";
     };
 
-    // Cancel → restore snapshot
     cancelBtn.onclick = () => {
       const {page,id} = modalTarget;
       const iframe = iframeRefs[page];
@@ -270,15 +366,12 @@
       modalBackdrop.style.display = "none";
     };
 
-    // Export
     exportBtn.addEventListener("click", async () => {
       const zip = new JSZip();
-      // Include edited HTML
       pages.forEach((filename) => {
         const html = editedContents[filename] || pageContents[filename] || "";
         zip.file(filename, html);
       });
-      // Include all other files unchanged
       Object.entries(otherFiles).forEach(([filename, data]) => {
         zip.file(filename, data);
       });
